nixidy/generated/prod/sveltekit-demo/HTTPRoute-sveltekit-demo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sveltekit-demo
  namespace: development
spec:
  hostnames:
    - demo.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: sveltekit-demo
          port: 3000
